# multillm

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 92a01398c4fe_policy_rate_limit_counters.py  b5ba62e0b0f7_auth_supabase_supabase_user_id_retira_.py  fa990bb51646_esquema_completo_fase_1.py
backend/app/: config.py  db.py  main.py
backend/app/services/auth/: __init__.py
backend/app/services/dlp/: __init__.py
backend/app/services/gateway/: __init__.py
backend/app/services/ledger/: __init__.py
backend/app/services/metering/: __init__.py
backend/app/services/onboarding/: __init__.py
backend/app/services/policy/: __init__.py
backend/app/services/tenant_resolver/: __init__.py
backend/tests/: test_auth.py  test_dlp.py  test_gateway.py  test_health.py  test_immutability.py  test_ledger.py  test_metering.py  test_onboarding.py  test_policy.py  test_rls.py  test_tenant_hard_delete.py  test_tenant_resolver.py
docs/: ARQUITECTURA.md  BACKLOG.md  DEPLOY.md  MODELO_DATOS.md  spike.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css
frontend/app/(onboarding)/start/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: ChatInput.tsx  ChatWindow.tsx  ContextBar.tsx  DLPBlockedBanner.tsx  DLPInterstitial.tsx  MessageBubble.tsx  ModelSelector.tsx  WizardProgress.tsx
frontend/lib/: api.ts  session.ts  sse.ts
frontend/lib/supabase/: client.ts
(+3 files in other folders)
