[project]
name = "aihub-backend"
version = "0.1.0"
description = "AIhub — AI Gateway white-label multitenant (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "litellm>=1.91",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# el engine async de SQLAlchemy es un singleton de proceso (app/db.py) atado
# al loop en el que se crearon sus conexiones pooled; con el scope por
# defecto (function) pytest-asyncio crea un loop nuevo por test y las
# conexiones quedan huérfanas de un loop distinto ("cannot perform
# operation: another operation is in progress" al reusar el pool entre
# tests). Un loop de sesión evita el problema.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
